--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "sass": "^1.38.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.19",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "typescript": "^4.3.5"
   }
 }
